# axstream

./: .gitignore  HANDOVER.md  LICENSE  README.md  SPEC.md  demo_dry.py  demo_learn.py  demo_live.py  demo_replay.py  demo_voice.py  pyproject.toml
axstream/: __init__.py  __main__.py  ax.py  bridge.py  capture.py  compiler.py  computer.py  driver.py  executor.py  llm.py  macrofile.py  macros.py  packs.py  prompt.py  replay.py  runner.py  session.py  spec.py  starter.py  tiny.py  voice.py
axstream/packs/: chrome_vscode_slack_zoom.json  finder_preview_terminal.json  mail_notes_calendar.json  messages_music_settings.json
bar/: index.html  main.js  package-lock.json  package.json  preload.js
docs/: package-lock.json  package.json  source.config.ts
docs/app/: global.css  layout.tsx
docs/app/(home)/: page.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/: mdx.tsx
docs/content/docs/: how-it-works.mdx  index.mdx  integrate.mdx  meta.json  quickstart.mdx  roadmap.mdx  spec.mdx
docs/lib/: layout.shared.tsx  shared.ts
swift/: Package.resolved  Package.swift  README.md
swift/Sources/axstream-bar/: Bar.swift  Driver.swift  Executor.swift  Hotkey.swift  Llm.swift  Mic.swift  Runner.swift  SpecCompiler.swift  Stt.swift  main.swift
tests/: test_compiler.py  test_macrofile.py  test_macros.py  test_replay_cli.py  test_tiny_guard.py
