[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axstream"
version = "0.0.1"
description = "Streaming JSONL action spec for computer use: execute actions while the LLM is still generating"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
voice = [
    "parakeet-mlx>=0.5.2",
    "sounddevice>=0.5.5",
]


[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
